# gfluent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: deployment.yml  python-publish.yml  python-test.yml  ut-and-sit.yml  ut.yml
docs/: conf.py  gfluent.rst  index.rst  modules.rst
gfluent/: __init__.py  bq.py  gcs.py  sheet.py
tests/: __init__.py  test_bq.py  test_bq_integration.py  test_gcs.py  test_gcs_and_bq.py  test_gcs_integration.py  test_sheet.py  test_sheet_integration.py
