[tool.poetry]
name = "gfluent"
version = "0.1.2"
description = "A fluent API for Google Cloud Python Client"
authors = ["Zhong Dai <zhongdai.au@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^2.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
poetry = "^1.1.5"
Sphinx = "^3.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
